--- a/index.html
+++ b/index.html
@@ -1,19 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <style>
-    body {padding: 0; margin: 0;}
-     </style>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <script src="p5.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
-    <script src="Agent.js"></script>
-    
-  </head>
-  <body>
-  </body>
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+
+    html,
+    body {
+      height: 100%;
+      width: 100%;
+      overflow-x: hidden;
+      overflow-y: hidden;
+    }
+
+    button,
+    input[type="submit"],
+    input[type="reset"] {
+      border: none;
+      border-radius: 15px;
+      padding: 10px;
+      cursor: pointer;
+      width: 10%;
+    }
+
+    button:focus {
+      outline: none;
+    }
+
+    button:active {
+      outline: none;
+      border: none;
+    }
+
+    #startBtn {
+      background: #666666;
+      color: #F9F9F9;
+      display: inline-block;
+    }
+
+    #goBtn {
+      color: #666666;
+      background: #F9F9F9;
+      display: inline-block;
+    }
+
+    #fBtn {
+      font-size: 20px;
+      color: #F9F9F9;
+      background: inherit;
+      display: inline-block;
+      width: 2%;
+    }
+  </style>
+
+  <script src="p5.min.js"></script>
+  <script src="p5.sound.min.js"></script>
+  <script src="p5.speech.js"></script>
+  <script src="Agent.js"></script>
+  <script src="sketch.js"></script>
+</head>
+
+<body>
+</body>
+
 </html>
