--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <meta name="Resource-type" content="Document" />
+
   <link rel="stylesheet" href="assets/font/stylesheet.css" type="text/css" charset="utf-8" />
   <link href="./style/website.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="./dist/fullpage.css" />
+
   <script src="./dist/p5.min.js"></script>
   <!-- <script src="./dist/p5.sound.min.js"></script> -->
   <script type="text/javascript" src="./dist/fullpage.js"></script>
@@ -114,7 +116,7 @@
   </div>
 
 <audio id="type-sound">
-  <source src="../assets/sound/typing-sound.mp3" type="audio/mpeg">
+  <source src="../assets/sound/type.mp3" type="audio/mpeg" autoplay loop>
 </audio>
 
 
@@ -202,8 +204,8 @@
 
 
   <script type="text/javascript">
-  var sound = document.getElementById("type-sound");
 
+var sound = document.getElementById("type-sound");
 
 function playVid() {
 }
@@ -243,9 +245,8 @@ function playVid() {
     }, 1)
 
 
-
-
-    function type1() {sound.play();
+    function type1() {
+        sound.play();
       const instance = new Typewriter('#titolo1', {
         strings: ['A diary for everyone.'],
         autoStart: true,
@@ -264,6 +265,7 @@ function playVid() {
     }
 
     function type2() {
+        sound.play();
       new Typewriter('#titolo2', {
         strings: ['What is it?'],
         autoStart: true,
@@ -323,6 +325,7 @@ function playVid() {
     }
 
     function type3() {
+        sound.play();
       new Typewriter('#titolo3', {
         strings: ['Credits.'],
         autoStart: true,
